--- a/Game.less
+++ b/Game.less
@@ -21,3 +21,25 @@ td{
 .possible{
 	background-color: blue;
 }
+
+.bouton a {
+	display:block;
+	width:150px;
+	line-height:50px;
+	text-align:center;
+	vertical-align:middle;
+	background:url(images/boutonnoir.png) no-repeat;
+	color:white;
+	text-decoration:none;
+}
+.bouton a:hover {
+	background:url(images/boutonnoir2.png) no-repeat;
+}
+
+.begin{
+	width: 50%;
+}
+
+.plat{
+	width: 50%;
+}
