--- a/Game.less
+++ b/Game.less
@@ -36,10 +36,6 @@ td{
 	background:url(images/boutonnoir2.png) no-repeat;
 }
 
-.begin{
-	width: 50%;
-}
-
 .plat{
-	width: 50%;
+	display: inline-table;
 }
