--- a/Game.less
+++ b/Game.less
@@ -10,7 +10,6 @@ td{
 .blanc {
 	background-color:white;
 }
-
 .select{
 	background-color: green;
 }
@@ -31,11 +30,27 @@ td{
 	background:url(images/boutonnoir.png) no-repeat;
 	color:white;
 	text-decoration:none;
+	position: absolute;
+	margin-top: 53%;
 }
 .bouton a:hover {
 	background:url(images/boutonnoir2.png) no-repeat;
 }
 
+body{
+	background: url(images/nature.jpg) no-repeat;
+}
+
 .plat{
-	display: inline-table;
+	position: absolute;
+}
+
+.cadre{
+	position: absolute;
+	margin-left: 65%;
+	margin-top: 15%;
+}
+
+.cadre p{
+	color:black;
 }
