modif nom du joueur

--- a/Game.less
+++ b/Game.less
@@ -45,12 +45,18 @@ body{
 	position: absolute;
 }
 
-.cadre{
-	position: absolute;
-	margin-left: 65%;
-	margin-top: 15%;
-}
-
 .cadre p{
+	display:block;
+	width:400px;
+	height: 220px;
+	line-height:50px;
+	text-align:center;
+	vertical-align:middle;
+	background:url(images/encad.jpg) no-repeat;
 	color:black;
+	text-decoration:none;
+	position: absolute;
+	margin-left: 125%;
+	margin-top: 35%;
+	font-size: xx-large;
 }
